<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-43dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/setting"
            android:textColor="#222222"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMaterial"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:checked="true"
            android:padding="15dp"
            android:text="@string/fake"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:layout_editor_absoluteX="0dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMaterial2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/fake1"
            app:layout_constraintTop_toBottomOf="@+id/switchMaterial"
            tools:layout_editor_absoluteX="0dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/fake5"
            app:layout_constraintTop_toBottomOf="@+id/switchMaterial5"
            tools:layout_editor_absoluteX="-51dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMaterial4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/fake3"
            app:layout_constraintTop_toBottomOf="@+id/switchMaterial2"
            tools:layout_editor_absoluteX="-16dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMaterial5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/fake4"
            app:layout_constraintTop_toBottomOf="@+id/switchMaterial4"
            tools:layout_editor_absoluteX="-40dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>