<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:background="#ffffff"
    android:layout_marginTop="7dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user"
            android:layout_marginTop="3dp"
            android:layout_width="86dp"
            android:layout_height="25dp"
            android:layout_marginStart="12dp"
            android:text="@string/profile"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/real_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/real_profile"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/user" />

        <TextView
            android:id="@+id/content_treehole"
            android:layout_width="378dp"
            android:layout_height="91dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:text="@string/text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/date_treehole"
            android:layout_width="77dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_treehole"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>